--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </script>
       <script>
           sap.ui.getCore().attachInit(function(){
-              sap.ui.xmlview({viewName : "sap.ui.demo.walkthrough.view.App"}).placeAt("content");
+              new sap.ui.core.ComponentContainer({name:"sap.ui.demo.walkthrough"}).placeAt("content");
           });
       </script>
     </head>
