--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       </script>
       <script>
           sap.ui.getCore().attachInit(function(){
-              new sap.ui.core.ComponentContainer({name:"sap.ui.demo.walkthrough"}).placeAt("content");
+              new sap.m.Shell({
+              app: new sap.ui.core.ComponentContainer({
+                  name:"sap.ui.demo.walkthrough",
+                  settings:{id:"walkthrough"}
+              })
+              }).placeAt("content");
           });
       </script>
     </head>
